# sphinx-test

./: .buildinfo  .gitignore  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: sphinx.yml
_sources/: index.rst.txt
docs/: conf.py  index.rst
sphinx_test/: __init__.py
