[project]
name = "sphinx-test"
version = "0.1.0"
description = ""
authors = [
    {name = "pbrassel",email = "52356233+pbrassel@users.noreply.github.com"}
]
readme = "docs/README.rst"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.docs.dependencies]
sphinx = "^8.2.3"
sphinx-rtd-theme = "^3.0.2"

